--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,46 @@
 
 .section_innner {
   padding: 50px 10% 30px;
-
+}
 .key {
   height: 500px;
   background: center / cover no-repeat url("../images/sample_key.jpg");
+  font-family: 'Noto Serif JP', serif;
+  font-weight: bold;
+}
+.key h1{
+  font-size: 2.5rem;
+}
+.section_title {
+  font-family: 'Noto Serif JP', serif;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.menu_title {
+  display: inline-block;
+  font-family: 'Noto Serif JP', serif;
+  font-size: 1.5rem;
+  color: #42210b;
+  border-bottom: solid #42210b 1px;
+  margin-bottom: 20px;
+}
+.center {
+  text-align: center;
+}
+.coffee_menu_image {
+  width: 20%;
+  border-radius: 50%;
+}
+.header_nav {
+  background: linear-gradient(90deg, #fff 20%, rgba(0,0,0,.6) 60%);
+}
+.global_nav_item {
+  color: #fff;
+  text-decoration: none;
+  display: block;
+}
+.global_nav_item:hover {
+  background: #fff;
+  color: #42210b;
 }
